Third commit - Title Validation with arguments and dynamic build version

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>core.App</mainClass>
+							<mainClass>core.Selenium</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
